--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 
 body, html {
   height: 100%;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+  font-family: Arial, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
 }
 
 .container {
@@ -65,8 +65,9 @@ body, html {
 }
 
 .main-title{
-  font-size: 4rem;
-  font-weight: 700;
+    font-family: Didot, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+  font-size: 5rem;
+  font-weight: 300;
   color: white;
   text-align: center;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
