--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,7 @@ body, html {
 }
 
 .main-title{
-    font-family: Didot, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+  font-family: Times New Roman, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
   font-size: 5rem;
   font-weight: 300;
   color: white;
